--- a/templates/admin/layout.html
+++ b/templates/admin/layout.html
@@ -126,6 +126,12 @@
                                    <i class="fas fa-file-medical-alt"></i> Analizler
                                 </a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link {% if request.endpoint == 'admin_newsletter' %}active{% endif %}" 
+                                   href="{{ url_for('admin_newsletter') }}">
+                                   <i class="fas fa-envelope"></i> Newsletter
+                                </a>
+                            </li>
                         </ul>
                     </div>
                 </div>
